Vlad's flags for the JVM.