@@ -2,7 +2,7 @@ name := "scala-streams"
 
 version := "1.0"
 
-scalaVersion := "2.11.4"
+scalaVersion := "2.11.6"
 
 resolvers ++= Seq(Resolver.sonatypeRepo("releases"), 
 		  Resolver.sonatypeRepo("snapshots"))
@@ -20,7 +20,11 @@ scalacOptions ++= Seq("-optimise",
 
 enablePlugins(JmhPlugin)
 
-javaOptions in run ++= Seq("-Xms2G", "-Xmx2G")
+javaOptions in run ++= Seq("-Xms2g", "-Xmx2g", "-Xss4m",
+			   "-XX:+CMSClassUnloadingEnabled",
+			   "-XX:MaxPermSize=512M",
+			   "-XX:ReservedCodeCacheSize=256m", "-XX:PermSize=256m",
+			   "-XX:+TieredCompilation", "-XX:+UseNUMA")
 
 testOptions in Test += Tests.Argument(TestFrameworks.ScalaCheck, 
 				      "-maxSize", "5", 
